--- a/html/index.htm
+++ b/html/index.htm
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
-  <div id="navbar" class="lightContent">
+  <div id="navbar">
     <span class="inactive">Main</span>
     <a href="/faq.htm">FAQ</a>
   </div>
