--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="./status.js"></script>
   <link href="/slimyet.css" rel="stylesheet" />
 </head>
-<body class="lightContent statusPage">
+<body class="statusPage">
   <h1>Are we <span class="emph">slim</span> yet?</h1>
 
   <h2>Request builds</h2>
