[html/status] Add 'Force' checkbox to pass --force to batch args

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -27,8 +27,9 @@
         <option value="tinderbox">Tinderbox build (mozilla-central)</option>
         <option value="compile">Compile of specific revision(s) (mozilla-central)</option>
       </select>
-      <input type="checkbox" value="multi" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build range</label>
-      <input type="checkbox" value="multi" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
+      <input type="checkbox" value="true" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build range</label>
+      <input type="checkbox" value="true" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
+      <input type="checkbox" value="true" id="reqForce"></input><label for="reqForce"> Force re-test</label>
     </div>
     <div id="reqNote" style="display: none;" class="note"></div>
     <div id="reqStartBox" style="display: none;">
