Add link to telemetry data.

--- a/html/index.htm
+++ b/html/index.htm
@@ -19,6 +19,7 @@
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   <div id="navbar">
     <span class="inactive">Main</span>
+    <a href="http://bit.ly/memorytelemetry" target="_blank">Telemetry</a>
     <a href="/faq.htm">FAQ</a>
   </div>
   <div id="graphs">
