[html] Change tick marks to show when a version branched *from* trunk, to be less confusing. Update FAQ accordingly

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -61,14 +61,12 @@ individual changes, where necessary.  We use this to help us figure out exactly
 where an increase in memory usage came from.</p>
 <p>We run against Linux 64-bit (non-pgo) builds, so platform-specific changes may
 not be captured here.</p>
-<p>The dates on the x-axis indicate when we switched development <em>to</em> a given
-version.  For example, we started developing Firefox 5 on March 3, 2011, but we
-didn't release it for three months after that.  In the meantime, we started on
-the code which would become Firefox 6 on April 12.</p>
-<p>The memory usage of version that we shipped as "Firefox N" corresponds roughly
-to the points directly under the "FF N+1" line, but we normally make some
-changes to Firefox N even after we started working on Firefox N+1, and those
-changes aren't plotted here.</p>
+<p>The dates on the x-axis indicate when a version of Firefox split off from the
+central repository.  For example, we started developing Firefox 5 on March 3,
+2011, and it branched from central on April 12th, when the central repository
+began work on what would be Firefox 6.</p>
+<p>We normally make further changes to the release after it leaves the central
+repository, but those changes are not plotted here.</p>
 <h2 id="how-is-this-data-generated">How is this data generated?</h2>
 <p>We run the target build of Firefox (Linux 64-bit, non-pgo) through a benchmark
 script (written using <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of
