[html] Clean up status css a little

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -32,20 +32,20 @@
       <input type="checkbox" value="true" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
       <input type="checkbox" value="true" id="reqForce"></input><label for="reqForce"> Force re-test</label>
     </div>
-    <div id="reqNote" style="display: none;" class="note"></div>
-    <div id="reqStartBox" style="display: none;">
+    <div id="reqNote" class="field note"></div>
+    <div id="reqStartBox" class="field">
       <span id="reqStartLabel" class="note"></span>
       <input type="text" id="reqStartBuild"></input>
     </div>
-    <div id="reqEndBox" style="display: none;">
+    <div id="reqEndBox" class="field">
       <span id="reqEndLabel" class="note"></span>
       <input type="text" id="reqEndBuild"></input>
     </div>
-    <div id="reqMsgBox" style="display:none;">
+    <div id="reqMsgBox" class="field">
       <span id="reqMsgLabel" class="note">Note</span>
       <input type="text" id="reqMsg"></input>
     </div>
-    <div id="reqSubmitbox" style="display: none;">
+    <div id="reqSubmitbox" class="field">
       <input id="reqSubmit" type="submit" value="Queue &laquo; no turning back &raquo;"></input>
       <br /><span class="note" id="reqError"></span>
     </div>
