--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -31,6 +31,7 @@
       <input type="checkbox" value="true" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build range</label>
       <input type="checkbox" value="true" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
       <input type="checkbox" value="true" id="reqForce"></input><label for="reqForce"> Force re-test</label>
+      <input type="checkbox" value="true" id="reqDoSeries"></input><label for="reqDoSeries"> Add to custom series</label>
     </div>
     <div id="reqNote" class="field note"></div>
     <div id="reqStartBox" class="field">
@@ -45,8 +46,13 @@
       <span id="reqMsgLabel" class="note">Note</span>
       <input type="text" id="reqMsg"></input>
     </div>
+    <div class="field series">
+      <span class="note">Series</span>
+      <input type="text" id="reqSeries"></input>
+    </div>
     <div id="reqSubmitbox" class="field">
-      <input id="reqSubmit" type="submit" value="Queue &laquo; no turning back &raquo;"></input>
+      <span class="small series">Custom series will be viewable at https://areweslimyet.com/#series:blah</span>
+      <br /><input id="reqSubmit" type="submit" value="Queue"></input>
       <br /><span class="note" id="reqError"></span>
     </div>
 
