[html/status] Allow queuing of custom FTP builds, fix up series code

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -26,6 +26,7 @@
         <option value="nightly">Nightly build</option>
         <option value="tinderbox">Tinderbox build (mozilla-central)</option>
         <option value="compile">Compile of specific revision(s) (mozilla-central)</option>
+        <option value="ftp">Specific build on ftp.mozilla.org</option>
       </select>
       <br />
       <input type="checkbox" value="true" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build range</label>
