Switch tests from mozilla-central pushes to mozilla-inbound pushes

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -51,8 +51,8 @@ and reducing Firefox's memory usage.</p>
 catch regressions before we ship them to users.</p>
 <p>Come say hi on <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
-<p>For each <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">change</a> to Mozilla's central repository, our build
-infrastructure generates a <a href="ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-linux64/">build</a> which we test and include
+<p>For each <a href="http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml">change</a> to Mozilla's inbound repository, our build
+infrastructure generates a <a href="ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-linux64/">build</a> which we test and include
 in the graphs here.</p>
 <p>We don't keep these per-change builds are around forever, so for data points
 before March 2012, we tested Firefox <a href="http://nightly.mozilla.org/">nightly builds</a>.</p>
