[html/status] mozilla-central -> mozilla-inbound

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -24,8 +24,8 @@
       <select id="reqBuildType">
         <option value="" selected="selected">Select</option>
         <option value="nightly">Nightly build</option>
-        <option value="tinderbox">Tinderbox build (mozilla-central)</option>
-        <option value="compile">Compile of specific revision(s) (mozilla-central)</option>
+        <option value="tinderbox">Tinderbox build (mozilla-inbound)</option>
+        <option value="compile">Compile of specific revision(s) (mozilla-inbound)</option>
         <option value="ftp">Specific build on ftp.mozilla.org</option>
       </select>
       <br />
