--- a/html/index.htm
+++ b/html/index.htm
@@ -10,10 +10,10 @@
     -->
   <title>ARE WE SLIM YET?</title>
   <meta charset="UTF-8" />
-  <script type="text/javascript" src="./jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="./jquery.flot.min.js"></script>
-  <script type="text/javascript" src="./slimyet.js"></script>
-  <link href="./slimyet.css" rel="stylesheet" />
+  <script type="text/javascript" src="/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="/jquery.flot.min.js"></script>
+  <script type="text/javascript" src="/slimyet.js"></script>
+  <link href="/slimyet.css" rel="stylesheet" />
 </head>
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
