[html] Make faq work from /mobile/ without losing where you came from

--- a/html/index.htm
+++ b/html/index.htm
@@ -19,7 +19,7 @@
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   <div id="navbar">
     <span class="inactive">Main</span>
-    <a href="/faq.htm">FAQ</a>
+    <a href="./faq.htm">FAQ</a>
   </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
