[html] Handle /mobile/

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -15,7 +15,8 @@
 <body class="faqPage">
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   <div id="navbar">
-    <a href="./">Main</a>
+    <a href="/">Desktop</a>
+    <a href="/mobile/">Mobile</a>
     <span class="inactive">FAQ</span>
   </div>
 <!-- This file is generated from faq/build.sh, do not edit directly -->
