--- a/html/index.htm
+++ b/html/index.htm
@@ -18,17 +18,18 @@
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   <div id="navbar">
-    <span class="inactive">Main</span>
+    <a href="/">Desktop</span>
+    <a href="/mobile/">Mobile</a>
     <a href="./faq.htm">FAQ</a>
   </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
   </div>
-  
+
   <div id="tooltip"></div>
-  
+
   <noscript><h3>This site requires javascript</h3></noscript>
-  
+
   <div id="footer"></div>
 </body>
 </html>
