[html] Make FAQ absolute link again

--- a/html/index.htm
+++ b/html/index.htm
@@ -20,7 +20,7 @@
   <div id="navbar">
     <a href="/">Desktop</span>
     <a href="/mobile/">Mobile</a>
-    <a href="./faq.htm">FAQ</a>
+    <a href="/faq.htm">FAQ</a>
   </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
