--- a/html/faq.htm
+++ b/html/faq.htm
@@ -48,14 +48,17 @@ historic results of that benchmark.</p>
 <p>Are we Slim Yet? was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
 and reducing Firefox's memory usage.</p>
+<p>Are we Slim Yet? originally tested only desktop Firefox builds.  But in late 2012,
+AWSY started tracking memory usage in Firefox for Android (ARMv6) as well.</p>
 <p>This site allows us to observe long-term trends in memory usage and hopefully
 catch regressions before we ship them to users.</p>
-<p>Come say hi on <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
+<p>Come say hi on <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.  The scripts used for the mobile benchmark
+can be found in the <a href="https://github.com/staktrace/awsy-armv6">awsy-armv6</a> repository.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
 <p>For each <a href="http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml">change</a> to Mozilla's inbound repository, our build
 infrastructure generates a <a href="ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-linux64/">build</a> which we test and include
 in the graphs here.</p>
-<p>We don't keep these per-change builds are around forever, so for data points
+<p>We don't keep these per-change builds around forever, so for data points
 before March 2012, we tested Firefox <a href="http://nightly.mozilla.org/">nightly builds</a>.</p>
 <p>A push may include multiple changes, and we have the ability to build and test
 individual changes, where necessary.  We use this to help us figure out exactly
@@ -69,11 +72,13 @@ began work on what would be Firefox 6.</p>
 <p>We normally make further changes to the release after it leaves the central
 repository, but those changes are not plotted here.</p>
 <h2 id="how-is-this-data-generated">How is this data generated?</h2>
-<p>We run the target build of Firefox (Linux 64-bit, non-pgo) through a benchmark
-script (written using <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of
-points along the way.  The testing procedure is as follows.</p>
+<p>For the desktop benchmark, we run the target build of Firefox (Linux 64-bit,
+non-pgo) through a benchmark script (written using <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its
+memory usage at a variety of points along the way.  The testing procedure is
+as follows.</p>
 <ul>
 <li>Start the browser, record <strong>fresh start</strong> memory.</li>
+<li>Sit idle for 30 seconds and record <strong>fresh start [+30s]</strong> memory.</li>
 <li>Run Mozilla's <a href="https://wiki.mozilla.org/Buildbot/Talos#tp5">TP5</a> pageload benchmark 5 times.  TP5 loads 100 popular
     webpages, served from a local webserver.  We load the pages round-robin into
     30 different tabs, with a 10 second delay between pageloads.</li>
@@ -83,6 +88,11 @@ points along the way.  The testing procedure is as follows.</p>
 <li>Close all open tabs and record <strong>after TP5, tabs closed</strong> and then
     <strong>after TP5, tabs closed [+30s]</strong>.</li>
 </ul>
+<p>For the mobile benchmark, we run the target build of Firefox (ARMv6 version)
+on a Samsung GT-B7510 device.  A script combined with an addon records Firefox's
+memory usage at various points.  The testing procedure for the mobile benchmark
+is identical to the desktop benchmark, except that instead of loading all 100
+pages from the TP5 pagesent 5 times, we load only 15 pages from TP5.</p>
 <p>Every time we measure memory usage, we also collect a full snapshot of
 about:memory.  You can browse these snapshots by clicking on any point in the
 graph. The data that was used for generating that particular point will be
