[html/status] Use new-style header from index

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -15,7 +15,7 @@
   <link href="/slimyet.css" rel="stylesheet" />
 </head>
 <body class="statusPage">
-  <h1>Are we <span class="emph">slim</span> yet?</h1>
+  <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
 
   <h2>Queue a Test</h2>
   <p id="requestBuildsNote" class="note">To request per-changeset resolution builds, or tests for custom patches, ask in #memshrink.</p>
