[html/status] Check insert at front of queue by default

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -31,7 +31,7 @@
       </select>
       <br />
       <input type="checkbox" value="true" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build Range</label>
-      <input type="checkbox" value="true" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
+      <input type="checkbox" checked value="true" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
       <input type="checkbox" value="true" id="reqForce"></input><label for="reqForce"> Force re-test</label>
       <input type="checkbox" value="true" id="reqDoSeries"></input><label for="reqDoSeries"> Add to custom series</label>
     </div>
