[html] Upgrade flot

--- a/html/index.htm
+++ b/html/index.htm
@@ -11,7 +11,7 @@
   <title>ARE WE SLIM YET?</title>
   <meta charset="UTF-8" />
   <script type="text/javascript" src="/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="/jquery.flot.min.js"></script>
+  <script type="text/javascript" src="/jquery.flot.js"></script>
   <script type="text/javascript" src="/slimyet.js"></script>
   <link href="/slimyet.css" rel="stylesheet" />
 </head>
