--- a/html/index.htm
+++ b/html/index.htm
@@ -18,7 +18,7 @@
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   <div id="navbar">
-    <a href="/">Desktop</span>
+    <a href="/">Desktop</a>
     <a href="/mobile/">Mobile</a>
     <a href="/faq.htm">FAQ</a>
   </div>
