[faq] Internal url changed albus -> arcus

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -146,7 +146,7 @@ Firefox remembers how much memory it used at its peak, its memory usage should
 not significantly increase over time.</p>
 <h2 id="how-can-i-request-additional-awsy-tests-on-specific-changesets-or-try-pushes">How can I request additional AWSY tests on specific changesets or try pushes?</h2>
 <p>Mozillians with access to the MoCo network can queue additional tests themselves
-at <a href="http://albus.mv.mozilla.com:8000/status/">albus's status page</a>. Tests take about ninety minutes, and will
+at <a href="http://arcus.mv.mozilla.com:8000/status/">arcus's status page</a>. Tests take about ninety minutes, and will
 appear on the main AWSY page within five minutes of completing.</p>
 <p>The tester also allows you to queue builds on a custom series, which will be
 visible at http://areweslimyet.com/?series=foo rather than the main
