updated latest mozmil github repo link

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -77,7 +77,7 @@ began work on what would be Firefox 6.</p>
 repository, but those changes are not plotted here.</p>
 <h2 id="how-is-this-data-generated">How is this data generated?</h2>
 <p>For the desktop benchmark, we run the target build of Firefox (Linux 64-bit,
-non-pgo) through a benchmark script (written using <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its
+non-pgo) through a benchmark script (written using <a href="https://github.com/mozilla/mozmill">mozmill</a>) and measure its
 memory usage at a variety of points along the way.  The testing procedure is as
 follows.</p>
 <ul>
