Remove support for CompileBuild (#47)
CompileBuild currently does not work, this removes the implementation
and adds exceptions if attempts are made to use it. Stubs were left in
place so that it should be easy to add back in with an alternate
implentation.

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -26,7 +26,7 @@
         <option value="try">Try build</option>
         <option value="nightly">Nightly build</option>
         <option value="tinderbox">Tinderbox build (mozilla-inbound)</option>
-        <option value="compile">Compile specific revision(s) (mozilla-inbound)</option>
+        <option disabled value="compile">Compile specific revision(s) (mozilla-inbound)</option>
         <option value="ftp">Other build on ftp.mozilla.org</option>
       </select>
       <br />
