FTP-Protocol is disabled on ftp.mozilla.org [1/2]
Switch to https instead.

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -48,7 +48,7 @@
         <p>Start Time and Stop Time can be unix timestamps or dates Date.parse recognizes (e.g. "Jan 1 2013 4:00")</p>
       </div>
       <div class="modeTinderbox single note">
-        Build an exact build available at <a href="ftp://ftp.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-linux64/">ftp://ftp.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-linux64/</a>
+        Build an exact build available at <a href="https://ftp.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-linux64/">ftp://ftp.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-linux64/</a>
       </div>
       <div class="modeTinderbox note">
         These are usually auto-queued by the cron job, so this is mainly useful for forcing re-tests.
