Retire the awsy website

--- a/html/index.htm
+++ b/html/index.htm
@@ -23,6 +23,10 @@
     <a href="/mobile/">Mobile</a>
     <a href="/faq.htm">FAQ</a>
   </div>
+  <p/>
+  <div id="goodnight-sweet-prince">
+    This website has been retired, it stopped updating in January 2017. Our tests are now run from within Mozilla's automation framework. Graphs and data can be found in <a href="https://treeherder.mozilla.org/perf.htm">Perfherder</a>
+  </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
   </div>
