--- a/html/index.htm
+++ b/html/index.htm
@@ -25,7 +25,7 @@
   </div>
   <p/>
   <div id="goodnight-sweet-prince">
-    This website has been retired, it stopped updating in January 2017. Our tests are now run from within Mozilla's automation framework. Graphs and data can be found in <a href="https://treeherder.mozilla.org/perf.htm">Perfherder</a>
+    This website has been retired, it stopped updating in January 2017. Our tests are now run from within Mozilla's automation framework. Graphs and data can be found in <a href="https://treeherder.mozilla.org/perf.html#/graphs">Perfherder</a>
   </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
